--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "node --watch index.js",
+    "dev": "node --watch src/main.js",
     "build": "vite build",
     "preview": "vite preview",
     "server": "node server.js"
